Fix text align
Fix main text align

--- a/css/main.css
+++ b/css/main.css
@@ -46,6 +46,7 @@ hr {
 }
 
 main {
+  text-align: center;
   max-width: 15em;
 }
 
